2006-12-04  Andrew Cagney  <cagney@redhat.com>

	* TestModify.java (TestModifyInternals): Delete killDuringTearDown
	call.
	* TestRegMemModify.java (TestI386ModifyInternals)
	(TestX8664ModifyInternals, TestPPC64ModifyInternals): Ditto.
	* SyscallExaminer.java (TaskAddedObserver.update): Ditto.
	* TestTaskObserverBlocked.java (SpawnObserver.spawnedParent): Ditto.
	(testBlockingFibonacciClone, testBlockingFibonacciFork): Ditto.
	
2006-12-04  Nurdin Premji  <npremji@redhat.com>

	* LinuxTask.java (fillRegisterBank): Added.
	(fillMemory): Added.
	(LinuxTask): Removed calls to setupMapsXXX/fill memory and register banks.
	* DummyTask.java (fillRegisterBank): Added.
	(fillMemory): Added.
	* TestIsa.java (AttachedObserver.updateAttached): Added call to try to detect isa. (For "on-demand" access of isa).
	(testAttachDetachAttachAgainDetachAgainAttachAgainAgain): Enabled.
	(testIsa): Enabled.
	* TaskState.java (detaching.handleStoppedEvent): notify Task that the given task has detached.
	* Task.java (TaskStateObservable): Added.
	(TaskStateObservable.notify): Added.
	(taskStateDetached): Added.
	(getRegisterBank): Added. Fills register bank if null.
	(clearIsa): Added.
	(static.update): When a task detaches, clear it's Isa information.
	(getMemory): Fill memory if null.

2006-12-04  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserverDetach.java (testDetachClone): Enable.

	* TestLib.java (setUp): Add children of proceses already in
	tidsToKillDuringTearDown to tidsToKillDuringTearDown.

2006-12-04  Nurdin Premji  <npremji@redhat.com>

	* Task.java (getRegisterBank): Added.
	* LinuxPowerPCSyscall.java (SocketSubSyscall.getArguments): Changed to use task.getMemory().
	* Breakpoint.java (reset): Ditto.
	(set): Ditto.
	* TestRegMemModify.java (TestPPC64ModifyInternals.PPC64TaskEventObserver.updateSyscallEnter): Ditto.
	(TestX8664ModifyInternals.X8664TaskEventObserver.updateSyscallExit): Ditto.
	(TestI386ModifyInternals.I386TaskEventObserver.updateSyscallEnter): Ditto.