@@ -1,5 +1,13 @@
 2006-12-04  Andrew Cagney  <cagney@redhat.com>
 
+	* TestLib.java (killDuringTearDown): Replace "int" parameter with
+	"ProcId", update references.
+	(pidsToKillDuringTearDown): Rename tidsToKillDuringTearDown,
+	update references.
+	(setUp): Simplify code detecting a parent.
+	(capturedSendTkill): Replace "int" with "ProcId", update
+	references.
+	
 	* TestModify.java (TestModifyInternals): Delete killDuringTearDown
 	call.
 	* TestRegMemModify.java (TestI386ModifyInternals)
